--- a/index.html
+++ b/index.html
@@ -28,16 +28,43 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-      p,
-      h1 {
+
+      * {
+        font-family: "Spartan";
         color: hsl(300, 43%, 22%);
       }
+
+      p {
+        font-size: 15px;
+      }
       .head {
-        font-family: "Spartan";
         text-align: center;
-        width: 50%;
+        width: 75%;
         margin: auto;
         margin-top: 5rem;
+        font-weight: 700;
+      }
+
+      .tagline {
+        margin: auto;
+        margin-top: 1.5rem;
+        text-align: center;
+        width: 75%;
+      }
+
+      .rating {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2.5rem;
+        align-items: center;
+      }
+
+      .rating .stars {
+        margin-bottom: 0.75rem;
+      }
+
+      .rating .review {
+        font-weight: 700;
       }
     </style>
   </head>
@@ -45,18 +72,54 @@
     <div class="head"><h1>10,000+ of our users love our products.</h1></div>
 
     <div class="tagline">
-      We only provide great products combined with excellent customer service.
-      See what our satisfied customers are saying about our services.
+      <p>
+        We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.
+      </p>
     </div>
-    Rated 5 Stars in Reviews Rated 5 Stars in Report Guru Rated 5 Stars in
-    BestTech Colton Smith Verified Buyer "We needed the same printed design as
-    the one we had ordered a week prior. Not only did they find the original
-    order, but we also received it in time. Excellent!" Irene Roberts Verified
-    Buyer "Customer service is always excellent and very quick turn around.
-    Completely delighted with the simplicity of the purchase and the speed of
-    delivery." Anne Wallace Verified Buyer "Put an order with this company and
-    can only praise them for the very high standard. Will definitely use them
-    again and recommend them to everyone!"
+    <div class="" style="margin-top: 50px">
+      <div class="rating">
+        <div class="stars">
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+        </div>
+        <div class="review">Rated 5 Stars in Reviews</div>
+      </div>
+      <div class="rating">
+        <div class="stars">
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+        </div>
+        <div class="review">Rated 5 Stars in Report Guru</div>
+      </div>
+      <div class="rating">
+        <div class="stars">
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+          <img src="images/icon-star.svg" alt="icon star" />
+        </div>
+        <div class="review">Rated 5 Stars in BestTech</div>
+      </div>
+
+      <div class="" style="margin-top: 50px">
+        Colton Smith Verified Buyer "We needed the same printed design as the
+        one we had ordered a week prior. Not only did they find the original
+        order, but we also received it in time. Excellent!" Irene Roberts
+        Verified Buyer "Customer service is always excellent and very quick turn
+        around. Completely delighted with the simplicity of the purchase and the
+        speed of delivery." Anne Wallace Verified Buyer "Put an order with this
+        company and can only praise them for the very high standard. Will
+        definitely use them again and recommend them to everyone!"
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
