--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         margin-top: 1.5rem;
         text-align: center;
         width: 75%;
+        margin-bottom: 1.5rem;
       }
 
       .rating {
@@ -65,6 +66,18 @@
 
       .rating .review {
         font-weight: 700;
+      }
+
+      .comments {
+        margin-top: 6rem;
+      }
+
+      .comment {
+        padding: 1rem;
+      }
+
+      .comment_text {
+        color: hsl(0, 0%, 100%);
       }
     </style>
   </head>
@@ -109,15 +122,31 @@
         <div class="review">Rated 5 Stars in BestTech</div>
       </div>
 
-      <div class="" style="margin-top: 50px">
-        Colton Smith Verified Buyer "We needed the same printed design as the
-        one we had ordered a week prior. Not only did they find the original
-        order, but we also received it in time. Excellent!" Irene Roberts
-        Verified Buyer "Customer service is always excellent and very quick turn
-        around. Completely delighted with the simplicity of the purchase and the
-        speed of delivery." Anne Wallace Verified Buyer "Put an order with this
-        company and can only praise them for the very high standard. Will
-        definitely use them again and recommend them to everyone!"
+      <div class="comments">
+        <div class="comment">
+          <div class="people">Colton Smith Verified Buyer</div>
+          <div class="comment_text">
+            We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent!"
+          </div>
+        </div>
+        <div class="comment">
+          <div class="people">Irene Roberts Verified Buyer</div>
+          <div class="comment_text">
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </div>
+        </div>
+        <div class="comment">
+          <div class="people">Anne Wallace Verified Buyer</div>
+          <div class="comment_text">
+            "Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+          </div>
+        </div>
       </div>
     </div>
 
