--- a/index.html
+++ b/index.html
@@ -17,78 +17,18 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="stylesheet" href="styles.css" />
+
     <title>Frontend Mentor | Social proof section</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-
-      * {
-        font-family: "Spartan";
-        color: hsl(300, 43%, 22%);
-      }
-
-      p {
-        font-size: 15px;
-      }
-      .head {
-        text-align: center;
-        width: 75%;
-        margin: auto;
-        margin-top: 5rem;
-        font-weight: 700;
-      }
-
-      .tagline {
-        margin: auto;
-        margin-top: 1.5rem;
-        text-align: center;
-        width: 75%;
-        margin-bottom: 1.5rem;
-      }
-
-      .rating {
-        display: flex;
-        flex-direction: column;
-        margin-top: 2.5rem;
-        align-items: center;
-      }
-
-      .rating .stars {
-        margin-bottom: 0.75rem;
-      }
-
-      .rating .review {
-        font-weight: 700;
-      }
-
-      .comments {
-        margin-top: 6rem;
-      }
-
-      .comment {
-        padding: 1rem;
-      }
-
-      .comment_text {
-        color: hsl(0, 0%, 100%);
-      }
-    </style>
   </head>
   <body>
     <div class="head"><h1>10,000+ of our users love our products.</h1></div>
 
     <div class="tagline">
-      <p>
-        We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.
-      </p>
+      We only provide great products combined with excellent customer service.
+      See what our satisfied customers are saying about our services.
     </div>
     <div class="" style="margin-top: 50px">
       <div class="rating">
@@ -124,15 +64,31 @@
 
       <div class="comments">
         <div class="comment">
-          <div class="people">Colton Smith Verified Buyer</div>
+          <div class="people">
+            <div class="people_avatar">
+              <img src="images/image-colton.jpg" alt="avatar" />
+            </div>
+            <div class="people_text">
+              <div class="people_name">Colton Smith</div>
+              <div class="people_type">Verified Buyer</div>
+            </div>
+          </div>
           <div class="comment_text">
-            We needed the same printed design as the one we had ordered a week
+            "We needed the same printed design as the one we had ordered a week
             prior. Not only did they find the original order, but we also
             received it in time. Excellent!"
           </div>
         </div>
         <div class="comment">
-          <div class="people">Irene Roberts Verified Buyer</div>
+          <div class="people">
+            <div class="people_avatar">
+              <img src="images/image-irene.jpg" alt="avatar" />
+            </div>
+            <div class="people_text">
+              <div class="people_name">Irene Roberts</div>
+              <div class="people_type">Verified Buyer</div>
+            </div>
+          </div>
           <div class="comment_text">
             "Customer service is always excellent and very quick turn around.
             Completely delighted with the simplicity of the purchase and the
@@ -140,7 +96,15 @@
           </div>
         </div>
         <div class="comment">
-          <div class="people">Anne Wallace Verified Buyer</div>
+          <div class="people">
+            <div class="people_avatar">
+              <img src="images/image-anne.jpg" alt="avatar" />
+            </div>
+            <div class="people_text">
+              <div class="people_name">Anne Wallace</div>
+              <div class="people_type">Verified Buyer</div>
+            </div>
+          </div>
           <div class="comment_text">
             "Put an order with this company and can only praise them for the
             very high standard. Will definitely use them again and recommend
@@ -154,7 +118,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Romualdus Aldi Hermanto</a>.
     </div>
   </body>
 </html>
