--- a/index.html
+++ b/index.html
@@ -24,92 +24,97 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <div class="head"><h1>10,000+ of our users love our products.</h1></div>
+    <div class="jumbotron">
+      <div class="jumbo_tag">
+        <div class="head"><h1>10,000+ of our users love our products.</h1></div>
 
-    <div class="tagline">
-      We only provide great products combined with excellent customer service.
-      See what our satisfied customers are saying about our services.
+        <div class="tagline">
+          We only provide great products combined with excellent customer
+          service. See what our satisfied customers are saying about our
+          services.
+        </div>
+      </div>
+
+      <div class="rate" style="margin-top: 50px">
+        <div class="rating">
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+          </div>
+          <div class="review">Rated 5 Stars in Reviews</div>
+        </div>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+          </div>
+          <div class="review">Rated 5 Stars in Report Guru</div>
+        </div>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+            <img src="images/icon-star.svg" alt="icon star" />
+          </div>
+          <div class="review">Rated 5 Stars in BestTech</div>
+        </div>
+      </div>
     </div>
-    <div class="" style="margin-top: 50px">
-      <div class="rating">
-        <div class="stars">
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
+    <div class="comments">
+      <div class="comment">
+        <div class="people">
+          <div class="people_avatar">
+            <img src="images/image-colton.jpg" alt="avatar" />
+          </div>
+          <div class="people_text">
+            <div class="people_name">Colton Smith</div>
+            <div class="people_type">Verified Buyer</div>
+          </div>
         </div>
-        <div class="review">Rated 5 Stars in Reviews</div>
+        <div class="comment_text">
+          "We needed the same printed design as the one we had ordered a week
+          prior. Not only did they find the original order, but we also received
+          it in time. Excellent!"
+        </div>
       </div>
-      <div class="rating">
-        <div class="stars">
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
+      <div class="comment">
+        <div class="people">
+          <div class="people_avatar">
+            <img src="images/image-irene.jpg" alt="avatar" />
+          </div>
+          <div class="people_text">
+            <div class="people_name">Irene Roberts</div>
+            <div class="people_type">Verified Buyer</div>
+          </div>
         </div>
-        <div class="review">Rated 5 Stars in Report Guru</div>
+        <div class="comment_text">
+          "Customer service is always excellent and very quick turn around.
+          Completely delighted with the simplicity of the purchase and the speed
+          of delivery."
+        </div>
       </div>
-      <div class="rating">
-        <div class="stars">
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-          <img src="images/icon-star.svg" alt="icon star" />
-        </div>
-        <div class="review">Rated 5 Stars in BestTech</div>
-      </div>
-
-      <div class="comments">
-        <div class="comment">
-          <div class="people">
-            <div class="people_avatar">
-              <img src="images/image-colton.jpg" alt="avatar" />
-            </div>
-            <div class="people_text">
-              <div class="people_name">Colton Smith</div>
-              <div class="people_type">Verified Buyer</div>
-            </div>
+      <div class="comment">
+        <div class="people">
+          <div class="people_avatar">
+            <img src="images/image-anne.jpg" alt="avatar" />
           </div>
-          <div class="comment_text">
-            "We needed the same printed design as the one we had ordered a week
-            prior. Not only did they find the original order, but we also
-            received it in time. Excellent!"
+          <div class="people_text">
+            <div class="people_name">Anne Wallace</div>
+            <div class="people_type">Verified Buyer</div>
           </div>
         </div>
-        <div class="comment">
-          <div class="people">
-            <div class="people_avatar">
-              <img src="images/image-irene.jpg" alt="avatar" />
-            </div>
-            <div class="people_text">
-              <div class="people_name">Irene Roberts</div>
-              <div class="people_type">Verified Buyer</div>
-            </div>
-          </div>
-          <div class="comment_text">
-            "Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery."
-          </div>
-        </div>
-        <div class="comment">
-          <div class="people">
-            <div class="people_avatar">
-              <img src="images/image-anne.jpg" alt="avatar" />
-            </div>
-            <div class="people_text">
-              <div class="people_name">Anne Wallace</div>
-              <div class="people_type">Verified Buyer</div>
-            </div>
-          </div>
-          <div class="comment_text">
-            "Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone!"
-          </div>
+        <div class="comment_text">
+          "Put an order with this company and can only praise them for the very
+          high standard. Will definitely use them again and recommend them to
+          everyone!"
         </div>
       </div>
     </div>
